deployments/umori/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: umori
  name: umori
  namespace: umori
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umori
  template:
    metadata:
      labels:
        app: umori
    spec:
      containers:
      - image: toxicglados/umori:latest
        imagePullPolicy: Always
        name: umori
        ports:
          - containerPort: 80
